RESOLVED FIXED191881
Tables with vertical-lr writing-mode doesn't apply correctly vertical-align: baseline
https://bugs.webkit.org/show_bug.cgi?id=191881
Summary Tables with vertical-lr writing-mode doesn't apply correctly vertical-align: ...
Javier Fernandez
Reported 2018-11-21 05:52:39 PST
Created attachment 355404 [details] Test case to reproduce the issue What steps will reproduce the problem? (1) Load the attached test case (2) (3) What is the expected output? The elements on each column should be aligned using their alphabetic baselines (expected.png) What do you see instead? The items are not aligned at all; the table may be using hanging baseline, but not sure (result.png)
Attachments
Test case to reproduce the issue (137 bytes, text/html)
2018-11-21 05:52 PST, Javier Fernandez
no flags
Expected result (3.76 KB, image/png)
2018-11-21 05:53 PST, Javier Fernandez
no flags
Actual result (4.95 KB, image/png)
2018-11-21 05:53 PST, Javier Fernandez
no flags
Test case to reproduce the issue (283 bytes, text/html)
2018-11-21 06:02 PST, Javier Fernandez
no flags
Patch (60.29 KB, patch)
2018-11-21 07:54 PST, Javier Fernandez
no flags
Archive of layout-test-results from ews105 for mac-sierra-wk2 (2.98 MB, application/zip)
2018-11-21 09:07 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews204 for win-future (12.87 MB, application/zip)
2018-11-21 09:54 PST, EWS Watchlist
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (2.55 MB, application/zip)
2018-11-21 10:00 PST, EWS Watchlist
no flags
Patch (115.31 KB, patch)
2018-11-21 13:59 PST, Javier Fernandez
no flags
Javier Fernandez
Comment 1 2018-11-21 05:53:15 PST
Created attachment 355405 [details] Expected result
Javier Fernandez
Comment 2 2018-11-21 05:53:34 PST
Created attachment 355406 [details] Actual result
Javier Fernandez
Comment 3 2018-11-21 06:02:42 PST
Created attachment 355407 [details] Test case to reproduce the issue
Javier Fernandez
Comment 4 2018-11-21 07:54:35 PST
Manuel Rego Casasnovas
Comment 5 2018-11-21 08:08:41 PST
Comment on attachment 355411 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=355411&action=review LGTM, I guess you still need to add the new results for other platforms before landing. > LayoutTests/fast/writing-mode/vertical-align-table-baseline-latin-expected.html:8 > +</style> Nit: I'd add the typical paragraph about when this passes.
EWS Watchlist
Comment 6 2018-11-21 09:07:35 PST
Comment on attachment 355411 [details] Patch Attachment 355411 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/10099721 New failing tests: fast/writing-mode/vertical-align-table-baseline-latin.html
EWS Watchlist
Comment 7 2018-11-21 09:07:36 PST
Created attachment 355420 [details] Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8 2018-11-21 09:54:03 PST
Comment on attachment 355411 [details] Patch Attachment 355411 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/10100233 New failing tests: fast/writing-mode/vertical-align-table-baseline.html
EWS Watchlist
Comment 9 2018-11-21 09:54:14 PST
Created attachment 355423 [details] Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.10.0-0.325-5-3-x86_64-64bit
EWS Watchlist
Comment 10 2018-11-21 10:00:42 PST
Comment on attachment 355411 [details] Patch Attachment 355411 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/10099992 New failing tests: fast/writing-mode/vertical-align-table-baseline-latin.html
EWS Watchlist
Comment 11 2018-11-21 10:00:44 PST
Created attachment 355425 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
Javier Fernandez
Comment 12 2018-11-21 13:59:09 PST
WebKit Commit Bot
Comment 13 2018-11-22 00:45:55 PST
Comment on attachment 355438 [details] Patch Clearing flags on attachment: 355438 Committed r238441: <https://trac.webkit.org/changeset/238441>
WebKit Commit Bot
Comment 14 2018-11-22 00:45:57 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 15 2018-11-22 00:46:41 PST
Note You need to log in before you can comment on or make changes to this bug.